Add a request table, which shows current customers wanting to request spots. Has approve button to move it to queue. And delete to remove. Added x button from queue for restaurant to delete from queue after seating. Added code to add customers to request queue. Widen page length to 700px.

--- a/WebInterface/index.html
+++ b/WebInterface/index.html
@@ -17,8 +17,8 @@
     <h1>Welcome to Hungy Beeper Restaurant Management</h1>
     <h3> Enter your restaurant's ID to access restaurant info: </h3>
     <form id="loginForm" method="link" action="restaurant.html">
-      Restaurant ID: <input type="text" name="resId"> 
-      E.g. QCzivaFPvQ  </br>
+      Restaurant ID: <input type="text" name="resId" value="QCzivaFPvQ"> 
+      E.g. QCzivaFPvQ</br>
       <!-- Password: <input type="password" name="resPass"> </br> -->
       <input type="submit" value="Submit">
     </form>
