Display hours:minutes for waitTime.

--- a/WebInterface/restaurant.html
+++ b/WebInterface/restaurant.html
@@ -167,21 +167,37 @@
           var waitTime;
           var curTime = new Date();
           var targetTime = object.get('targetTime');
-          waitTime = new Date(targetTime - curTime);
-          console.log("t " + targetTime);
-          console.log("c " + curTime);
+
+          //console.log("t " + targetTime);
+          //console.log("c " + curTime);
+
+          var minutes;
+          var hours;
+          waitTime = targetTime - curTime;
+          var minutesTotal = Math.floor((waitTime/1000)/60);
+
 
           if (waitTime < 0)
-            waitTime = 0;
+          {
+            hours = 0;
+            minutes = 0;
+          }
           else 
-            waitTime = waitTime.getMinutes()+1;
+          {
+            hours = Math.floor(minutesTotal/60)
+            minutes = minutesTotal%60 +1;
+          }
+          
+          if (hours == 0)
+            cur['waitTime'] = minutes + "";
+          else if (minutes > 9)
+            cur['waitTime'] = hours + "h:" + minutes;
+          else
+            cur['waitTime'] = hours + "h:0" + minutes;
 
 
-          console.log(waitTime);
-  
-          cur['waitTime'] = waitTime;
-
-          object.set("waitTime", waitTime);
+          //console.log(waitTime);
+          object.set("waitTime", minutesTotal);
           object.save();
 
 
@@ -439,6 +455,7 @@
         newQueue.set("waitTime", waitTime);
         newQueue.set("customerName", name);
         newQueue.set("tableReady", false);
+        newQueue.set("valid", true);
 
         var curTime = new Date();
         console.log("Cur Time:" + curTime);
@@ -488,7 +505,6 @@
         newQueue.set("customerId", customerId);
         newQueue.set("headCount", headCount);
         newQueue.set("customerName", name);
-        newQueue.set("valid", true);
         newQueue.save();
       });
     };
